[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainController.gd" type="Script" id=1]
[ext_resource path="res://akaPosse.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TableCell.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
extra_spacing_top = -3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
color = Color( 1, 0.890196, 0.729412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
TableCellResource = ExtResource( 3 )

[node name="StepTimer" type="Timer" parent="VBoxContainer"]
wait_time = 0.04

[node name="InputsMargin" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="InputsContainer" type="HBoxContainer" parent="VBoxContainer/InputsMargin"]
margin_left = 24.0
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 56.0

[node name="StrInputA" type="TextEdit" parent="VBoxContainer/InputsMargin/InputsContainer"]
margin_right = 322.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )

[node name="StrInputB" type="TextEdit" parent="VBoxContainer/InputsMargin/InputsContainer"]
margin_left = 326.0
margin_right = 648.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )

[node name="StartButton" type="Button" parent="VBoxContainer/InputsMargin/InputsContainer"]
margin_left = 652.0
margin_right = 976.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="output" type="Label" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 1024.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true

[node name="TableMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 1024.0
margin_bottom = 210.0
size_flags_horizontal = 3
custom_constants/margin_right = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 80

[node name="TableGrid" type="GridContainer" parent="VBoxContainer/TableMargin"]
margin_left = 24.0
margin_right = 1000.0
size_flags_vertical = 3
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 4
[connection signal="should_stop_signal" from="VBoxContainer" to="VBoxContainer" method="_on_VBoxContainer_should_stop_signal"]
[connection signal="update_table" from="VBoxContainer" to="VBoxContainer" method="_on_VBoxContainer_update_table"]
[connection signal="timeout" from="VBoxContainer/StepTimer" to="VBoxContainer" method="_on_StepTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/InputsMargin/InputsContainer/StartButton" to="VBoxContainer" method="_on_StartButton_pressed"]
